--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
 	},
 	"autoload": {
 		"psr-4": {			
-			"App\\Controller\\": "App/Controller/"
+			"App\\Controller\\": "App/Controller/",
+			"App\\Model\\": "App/Model/",
+			"App\\View\\": "App/View/"
 		}
 
 	}
